Use Boolean.valueOf() or static constants rather than instantiating new Boolean objects.
git-svn-id: http://svn.code.sf.net/p/kolmafia/code@10619 b29ace70-8910-0410-8dcc-aa2fc6433167